--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </h1>
                     <h1><span class="multiText">Coder</span></h1>
                 <p>
-                    Hi, I am Srinjoy Das, a student of Computer Science and Engineering at IIT Khargpur,enrollee in it's Dual Degree course
+                    Hi, I am Srinjoy Das, a student of Computer Science and Engineering at IIT Khargpur,enrolled in it's Dual Degree course
                 </p>
                 <div class="btns">
                 <form action="https://www.linkedin.com/public-profile/settings"><button>LinkedIn</button></form>
