--- a/contactMe.html
+++ b/contactMe.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Form || Learning robo</title>
+    <title>Contact Form</title>
     <link rel="stylesheet" href="contactStyle.css" />
     <script
       src="https://kit.fontawesome.com/64d58efce2.js"
@@ -12,57 +12,54 @@
     ></script>
   </head>
 <body>
-  <div class="background">
-    <div class="container">
-      <div class="screen">
-        <div class="screen-header">
-          <div class="screen-header-left">
-            <div class="screen-header-button close"></div>
-            <div class="screen-header-button maximize"></div>
-            <div class="screen-header-button minimize"></div>
-          </div>
-          <div class="screen-header-right">
-            <div class="screen-header-ellipsis"></div>
-            <div class="screen-header-ellipsis"></div>
-            <div class="screen-header-ellipsis"></div>
-          </div>
-        </div>
-        <div class="screen-body">
-          <div class="screen-body-item left">
-            <div class="app-title">
-              <span>CONTACT</span>
-              <span>ME</span>
-              <span>SRINJOY</span>
-              <span>DAS</span>
-              <pre>srinjoydas566
-    @gmail.com</pre>
+  <div class="contact_us">
+    <div class="responsive-container-block container">
+      <form class="form-box">
+        <p class="text-blk contact-head">
+          Get in touch
+        </p>
+        <p class="text-blk contact-subhead">
+Welcome to my "Contact Me" page! I'm thrilled that you're interested in getting in touch with me. Whether you have a question, a suggestion, or just want to say hello, I'm always happy to hear from readers and fellow professionals.
+        </p>
+        <div class="container-block form-wrapper">
+          <div class="responsive-container-block">
+            <div class="responsive-cell-block wk-ipadp-6 wk-tab-12 wk-mobile-12 wk-desk-6" id="i10mt-4">
+              <p class="text-blk input-title">
+                First Name
+              </p>
+              <input class="input" id="ijowk-4" name="FirstName">
             </div>
-            <div class="app-contact">CONTACT INFO : +91 6289163415</div>
-          </div>
-          <div class="screen-body-item">
-            <div class="app-form">
-              <div class="app-form-group">
-                <input class="app-form-control" placeholder="NAME">
-              </div>
-              <div class="app-form-group">
-                <input class="app-form-control" placeholder="EMAIL">
-              </div>
-              <div class="app-form-group">
-                <input class="app-form-control" placeholder="CONTACT NO">
-              </div>
-              <div class="app-form-group message">
-                <input class="app-form-control" placeholder="MESSAGE">
-              </div>
-              <div class="app-form-group buttons">
-                <button class="app-form-button" type="submit">CANCEL</button>
-                <button class="app-form-button" type="submit">SEND</button>
-              </div>
+            <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
+              <p class="text-blk input-title">
+                Last Name
+              </p>
+              <input class="input" id="indfi-3" name="Last Name">
+            </div>
+            <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
+              <p class="text-blk input-title">
+                Email
+              </p>
+              <input class="input" id="ipmgh-4" name="Email">
+            </div>
+            <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
+              <p class="text-blk input-title">
+                Phone No.
+              </p>
+              <input class="input" id="imgis-4" name="PhoneNumber">
+            </div>
+            <div class="responsive-cell-block wk-tab-12 wk-mobile-12 wk-desk-12 wk-ipadp-12" id="i634i-4">
+              <p class="text-blk input-title">
+                Message
+              </p>
+              <textarea class="textinput" id="i5vyy-4" placeholder="Write your message..."></textarea>
             </div>
           </div>
+          <button class="submit-btn">
+            Send Message
+          </button>
         </div>
-      </div>
+      </form>
     </div>
   </div>
-  
   </body>
 </html>
