--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 <body>
     <div class="container">
         <nav>
-            <div class="logo">Portfolio<b>.</b></div>
+            <div class="logo">Portfolio</div>
             <ul class = "navItems">
+                <div class="li1">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
+                </div>
+                <div class="li2">
                 <li><a href="skills.html">Skills</a></li>
-                <li><a href="contactMe.html">Contact Me</a></li>
+                <li><a href="contactMe.html">Contact</a></li>
+                </div>
             </ul>
             <!-- <div class="links">
                 <a href="#"><i class="fa-brands fa-linkedin fa-beat"></i></a>
